# LabsOS

./: README.md  main.tex
CP/: CMakeLists.txt
CP/include/: client_app.h  common.h  game_logic.h  pipes.h  server_app.h
CP/src/: game_logic.cpp
CP/src/client/: client_app.cpp  main_client.cpp
CP/src/server/: main_server.cpp  server_app.cpp
include/: os.h
include/lab1/: os.h
lab1/: CMakeLists.txt
lab1/include/: os.h
lab1/src/: child.cpp  os_unix.cpp  os_win.cpp
lab1/texsrc/: literature.tex  problem.tex  src.tex  thinks.tex
lab2/: CMakeLists.txt  main.cpp
lab2/include/: bigint.h  thread.h
lab2/src/: bigint.cpp  thread.cpp
lab2/srctex/: report.tex
lab2/srctex/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab2/srctex/styles/: log-styles.sty
lab3/: CMakeLists.txt
lab3/include/: exception.h  os.h
lab3/report/: main.tex
lab3/report/src/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab3/report/styles/: log-style.sty
lab3/src/: child.cpp  os.cpp  parent.cpp
lab4/: CMakeLists.txt  main.tex  program1.cpp  program2.cpp
lab4/include/: dynamic_library.h  pi_contract.h  proizv_contract.h
lab4/lib/: first.cpp  leibniz.cpp  second.cpp  wallis.cpp
lab4/report/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
lab4/src/: dynamic_library.cpp
lab5/: main.tex
lab5/report/: benchmark.tex  literature.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
src/: parent.cpp
styles/: log-style.sty
texsrc/: benchmark.tex  titlepage.tex
